--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "collUtils"]
+	path = collUtils
+	url = https://bitbucket.org/kindlychung/collutils
+	shallow = true
+	registered = true
